--- a/03mongodb/.env
+++ b/03mongodb/.env
@@ -1,1 +1,1 @@
-MONGO_URI = "mongodb+srv://joancema:jacm1310@cluster0.x7met.mongodb.net/sextob?retryWrites=true&w=majority"
+MONGO_URI = "mongodb+srv://joancema:jacm1310@cluster0.x7met.mongodb.net/Milita?retryWrites=true&w=majority"
